# my-installs

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: my_installs-checkpoint.ipynb
my_installs/: __init__.py
