[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-installs"
version = "0.1.0"
description = "Small helper utilities"
requires-python = ">=3.8"

authors = [
  { name = "Sami Marshak" } # REMEMBER TO PUT YOUR OWN NAME
]

[tool.setuptools]
packages = ["my_installs"]